# recurse-words

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  installation.rst  overview.rst
docs/api/: corpi.rst  graph.rst  recursers.rst
docs/api/examples/: basic_usage.rst
docs/api/recursers/: graph.rst  recurse_words.rst
docs/examples/: basic_usage.rst  datashader.rst
examples/: basic_use.py  phonetic_common.pck
recurse_words/: __init__.py  corpi.py  graph.py  recurse_words.py
recurse_words/recursers/: __init__.py  graph.py  recurser.py
