[tool.poetry]
name = "recurse-words"
version = "0.2.0"
description = "find words that have other words in them that when you take the inner words out what's left is still a word"
authors = ["sneakers-the-rat <JLSaunders987@gmail.com>"]
license = "Unlicense"
homepage = "https://github.com/sneakers-the-rat/recurse-words"
repository = "https://github.com/sneakers-the-rat/recurse-words"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
tqdm = "^4.60.0"
pygraphviz = "^1.7"
requests = "^2.25.1"
datashader = "^0.12.1"
sphinx = {version="^3.5.4", optional = true}
furo = {version = "^2021.4.11-beta.34", optional=true}
scikit-image = "^0.18.1"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
docs = ["sphinx", "furo"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
